--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "dotenv": "^4.0.0",
         "express": "^4.15.4",
         "express-decompress": "0.0.2",
         "http": "0.0.0",
