--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "dependencies": {
         "dotenv": "^4.0.0",
         "express": "^4.15.4",
-        "express-decompress": "0.0.2",
         "http": "0.0.0",
         "https": "^1.0.0",
         "node-fetch": "^1.7.3",
-        "xml2js": "^0.4.19",
-        "zlib": "^1.0.5"
+        "xml2js": "^0.4.19"
     }
 }
