--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "^1.18.2",
+        "body-parser-xml": "^1.1.0",
         "cors": "^2.8.4",
         "dotenv": "^4.0.0",
         "express": "^4.15.4",
