--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "https": "^1.0.0",
         "mongodb": "^2.2.31",
         "node-fetch": "^1.7.3",
+        "scrape-it": "^5.1.4",
         "xml2js": "^0.4.19"
     }
 }
